--- a/package.json
+++ b/package.json
@@ -4,7 +4,18 @@
   "description": "Project",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "lint": "npx eslint ."
+  },
+  "eslintIgnore": ["**/*.js"],
   "devDependencies": {
     "typescript": "^5.0.3"
+  },
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "^2.8.8"
   }
 }
