tech: env refactoring and add repository and package

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,6 +17,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.8.0",
     "@prisma/client": "4.8.1",
     "fastify": "^4.11.0"
   },
