--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.8.0",
     "@prisma/client": "4.8.1",
-    "fastify": "^4.11.0"
+    "fastify": "^4.11.0",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
