--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,10 +19,11 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.8.0",
     "@prisma/client": "4.8.1",
-    "fastify": "^4.11.0",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "fastify": "^4.11.0"
   },
   "devDependencies": {
+    "@elastic/elasticsearch-mock": "^2.0.0",
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
     "pino-pretty": "^9.1.1",
