--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,12 +1,15 @@
 # Postgresql
-DATABASE_URL=
+DATABASE_URL="postgresql://test:test@test:5432/test"
 
 # Elastic Search
-ELASTIC_PASSWORD=
-KIBANA_PASSWORD=
+ELASTIC_USER=test
+ELASTIC_PASSWORD=test
+KIBANA_PASSWORD=test
 STACK_VERSION=8.8.1
 CLUSTER_NAME=docker-cluster
 LICENSE=basic
+ES_URL="https://localhost:9200"
 ES_PORT=9200
 KIBANA_PORT=5601
 MEM_LIMIT=1073741824
+ELASTIC_CA_FILE=/foo/bar/apps/api/ca.crt
