--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,6 +29,7 @@
     "pino-pretty": "^9.1.1",
     "prisma": "^4.8.1",
     "typescript": "^5.0.3",
-    "vitest": "^0.26.3"
+    "vitest": "^0.29.2",
+    "vitest-mock-extended": "^1.1.3"
   }
 }
